# MONGODB-GRAPH-EXTENSION

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.csv
api/: benchmark.py  load_roadnet_to_mongo.py  main.py
data/: generate_graph.py  generate_large_graph.py  load_roadnet_to_mongo.py  load_snap_to_mongo.py  plot_all_benchmarks.py  plot_benchmark.py  sample_connected_pairs.py  sample_pairs.json
examples/: bidirectional_example.cpp  insert_objectid_graph.py  insert_weighted_graph.py  path_example.cpp  weighted_path_example.cpp
mongo/: document_source_bidirectional_graph_lookup.cpp
src/mongo/: graph_extension.cpp  graph_extension.h  path_finding.cpp  path_finding.h
